--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "workbench.colorTheme": "Eclipse Dark"
+    "workbench.colorTheme": "Eclipse Dark",
+    "java.debug.settings.onBuildFailureProceed": true
 }
