--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "workbench.colorTheme": "Default Dark+",
+    "workbench.colorTheme": "Eclipse Dark",
     "java.debug.settings.onBuildFailureProceed": true
 }
